[metadata]
name = fedcloudclient
summary = EGI FedCloud client
description-file = README.md
description-content-type = text/markdown
author = Viet Tran, Enol Fernandez
author-email = tdviet@gmail.com
home-page = 
classifier = 
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Monitoring
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha
    Environment :: OpenStack

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages =
    fedcloudclient

[entry_points]
console_scripts = 
    fedcloud= fedcloudclient.cli:cli

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
