[metadata]
name = fedcloudclient
summary = EGI FedCloud client
description_file = README.md
description_content_type = text/markdown
author = Viet Tran, Enol Fernandez
author_email = tdviet@gmail.com
home_page = https://fedcloudclient.fedcloud.eu/
classifier = 
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages =
    fedcloudclient

scripts =
    ./examples/list-my-own-vms.sh
    ./examples/list-all-my-own-vms.sh

[entry_points]
console_scripts = 
    fedcloud= fedcloudclient.cli:cli

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
